--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-promise": "^4.2.1",
-    "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
+    "obsidian": "^0.12.5",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
   },
